Tooltips + Nav fix + rm Flicker Effect

--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -81,7 +81,7 @@ html, body {
 	opacity: 0;
 	z-index: 2;
 	pointer-events: none;
-	animation: flicker 0.15s infinite;
+	/*animation: flicker 0.01s infinite;*/
 }
 
 .content::before {
@@ -94,7 +94,7 @@ html, body {
 	right: 0;
 	background: linear-gradient(
 		rgba(18, 16, 16, 0) 50%, rgba(0, 16, 0, 0.25) 50%), 
-		linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06)
+		linear-gradient(135deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06)
 	);
 	z-index: 2;
 	background-size: 100% 2px, 3px 100%;
